--- a/public/css/style_accueil.css
+++ b/public/css/style_accueil.css
@@ -301,6 +301,39 @@ footer ul li {
   font-size: 12px;
 }
 
+/*///////////////////////////////////////////////////////////////////// INFORMATION //////////////////////////////////////////////////////////////////////*/
+
+
+.image_info {
+  margin-bottom: 15px;
+  margin-top : 15px;
+}
+
+.titre_info {
+  width: 50%;
+  margin-left: 25%;
+  margin-right: 25%;
+  text-align: center;
+  height: 100%;
+  font-weight: 100;
+  margin-top : 40px;
+  font-size: 25px;
+  border: 5px solid black;
+  border-radius: 15px;
+}
+
+.info_info {
+  width: 40%;
+  margin-left: 30%;
+  margin-right: 30%;
+  text-align: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  font-size: 20px;
+}
+
+
+
 /*///////////////////////////////////////////////////////////////////// PANIER //////////////////////////////////////////////////////////////////////*/
 
 .sac {
@@ -315,11 +348,9 @@ footer ul li {
   text-align: center;
   height: 100%;
   font-weight: 100;
-  color: white;
   margin-top : 40px;
   font-size: 25px;
-  background-color: rgb(65, 231, 215);
-  border: 5px solid #00FFFF;
+  border: 5px solid black;
   border-radius: 15px;
 }
 
@@ -345,21 +376,20 @@ footer ul li {
   margin-left: 2%;
   margin-right: 2%;
   margin-top : 40px;
-  color: white;
   text-align: right;
   height: 100px;
   font-weight: 600;
   font-size: 25px;
-  background-color: rgb(66, 233, 216);
-  border: 5px solid #00FFFF;
+  border: 5px solid black;
   border-radius: 15px;
   padding-right: 15px;
   padding-top : 30px;
 }
 
 #acheter {
-  margin-left: 90%;
-  margin-right: 1%;
+  width: 100%;
+  padding-left: 46%;
+  padding-right: 46%;
   margin-bottom: 50px;
   margin-top: 20px;
 }
